# hydrui

./: .dockerignore  .editorconfig  .envrc  .gitignore  Dockerfile  LICENSE  README.md  VERSION  build-site.sh  eslint.config.mjs  flake.nix  go.mod  go.sum  netlify.toml  package-lock.json  package.json  prettier.config.mjs
.do/: deploy.template.yaml
.github/workflows/: go.yaml  nix.yml  windows.yaml
.zed/: settings.json
cmd/gen-keys/: README.md  main.go
cmd/gen-license-data/: README.md  main.go
cmd/hydrui-api/: README.md  main.go
cmd/hydrui-dev/: README.md  main.go
cmd/hydrui-server/: README.md  cli.go  hydrui-server.manifest  main.go  no_ui.go  resource_windows_386.syso  resource_windows_amd64.syso  resource_windows_arm.syso  resource_windows_arm64.syso  versioninfo.json  win32_ui.go
cmd/read-report/: main.go
cmd/wisp-server/: main.go
deploy/: README.md
deploy/compose/: README.md
deploy/compose/client-only/: README.md  docker-compose.yml
deploy/compose/server-mode/: README.md  docker-compose.yml  environment.txt  htpasswd.txt  init-hydrus-api.sh
deploy/helm/hydrui/: Chart.yaml  README.md  values.yaml
deploy/helm/hydrui/examples/: values-server-bundled.yaml  values-server-external.yaml  values-with-ingress.yaml
deploy/helm/hydrui/templates/: NOTES.txt  _helpers.tpl  deployment.yaml.tpl  hydrus-configmap.yaml.tpl  hydrus-deployment.yaml.tpl  hydrus-pvc.yaml.tpl  hydrus-service.yaml.tpl  ingress.yaml.tpl  pvc-acme.yaml.tpl  secret.yaml.tpl  service-internal.yaml.tpl  service.yaml.tpl  serviceaccount.yaml.tpl
deploy/kubernetes/: README.md
deploy/kubernetes/client-only/: README.md  deployment.yaml  kustomization.yaml
deploy/kubernetes/client-only-demo-overlay/: ingress.yaml  kustomization.yaml
deploy/kubernetes/server-mode/: README.md  hydrui-deployment.yaml  hydrui-service.yaml  hydrus-deployment.yaml  hydrus-init-script.yaml  hydrus-service.yaml  kustomization.yaml  pvc.yaml  secret.yaml
deploy/kubernetes/server-mode-demo-overlay/: kustomization.yaml
desktop/: .clang-format  .envrc  CMakeLists.txt  README.md  main.cpp
desktop/api/types/: add_file_response.cpp  add_file_response.h  add_file_response_test.cpp  add_files_request.cpp  add_files_request.h  add_notes_request.cpp  add_notes_request.h  add_notes_response.cpp  add_notes_response.h  add_tags_request.cpp  add_tags_request.h  add_url_request.cpp  add_url_request.h  add_url_response.cpp  add_url_response.h  api_response.cpp  api_response.h  associate_url_request.cpp  associate_url_request.h  delete_notes_request.cpp  delete_notes_request.h  dismiss_popup_request.cpp  dismiss_popup_request.h  file_domain_param.cpp  file_domain_param.h  file_identifier.cpp  file_identifier.h  file_identifiers_response.cpp  file_identifiers_response.h  file_metadata.cpp  file_metadata.h  file_metadata_params.cpp  file_metadata_params.h  file_metadata_response.cpp  file_metadata_response.h  file_relationship_info.cpp  file_relationship_info.h  file_relationship_pair.cpp  file_relationship_pair.h  files_param.cpp  (+54 more)
internal/bugreport/: devkey.go  handler.go
internal/crypt/: decrypt.go  encrypt.go
internal/options/: expand.go  expand_test.go  flag.go  options.go  secret.go  selfsigned.go
internal/pack/: fs.go  pack.go  serve.go
internal/server/: hashtype_string.go  htpasswd.go  htpasswd_test.go  index.html.tmpl  listener.go  manager.go  server.go  sw.js
internal/webdata/: .gitignore  dist.go
internal/wisp/: README.md  client.go  client_test.go  dialer.go  dialer_test.go  integration_test.go  packet.go  packet_test.go  server.go
nix/: format.nix  gen-module-options.nix  module.nix
nix/overlay/: default.nix  hydrui-api.nix  hydrui-desktop.nix  hydrui-server.nix  hydrui-www.nix
nix/tests/: docker-compose.nix  kubernetes.nix
web/hydrui-client/: index.html  package.json  tsconfig.json  vite.config.ts
web/hydrui-client/public/: thirdparty.html
web/hydrui-client/src/: App.tsx  index.css  main.tsx
web/hydrui-client/src/api/: client.ts  demoServer.ts  fetchHttpClient.ts  memoryHttpClient.ts  mockClient.ts  types.ts
web/hydrui-client/src/constants/: contentUpdates.ts  filetypes.ts  mimetypes.ts  relationships.ts  services.ts  sort.ts
web/hydrui-client/src/file/: dispatch.tsx  renderers.ts  types.ts  viewers.tsx
web/hydrui-client/src/file/image/: ImageViewer.tsx
web/hydrui-client/src/hooks/: useContextMenu.ts  useFileRatings.test.ts  useFileRatings.ts  useLongPress.ts  useShortcut.test.ts  useShortcut.ts  useTabs.ts
web/hydrui-client/src/store/: apiStore.ts  contextMenuStore.ts  modelMetaStore.ts  pageStore.ts  popupStore.ts  preferencesStore.ts  searchStore.ts  servicesStore.test.ts  servicesStore.ts  storage.ts  toastStore.ts  uiStateStore.ts
web/hydrui-client/src/utils/: blake2b.ts  debouncedStorage.ts  format.test.ts  format.ts  layerTree.ts  matrix.ts  memoryStorage.ts  modelManager.ts  modes.ts  pdf.ts  serverMode.ts  zipjs.ts
web/hydrui-client/src/workers/: autotag.worker.ts  bugreport.worker.ts  psd.worker.ts  tsconfig.json
web/hydrui-site/: .eleventy.js  .prettierrc  package.json  tsconfig.json
web/hydrui-site/src/: index.liquid
web/hydrui-site/src/_data/: languages.json  nixosModuleOptions.json
web/hydrui-site/src/en/: en.json  index.liquid
web/hydrui-util/: package.json  tsconfig.json
web/hydrui-util/scripts/: pack.ts
web/hydrui-util/src/: bcrypt.ts  blake2b.ts  nacl.ts  stream.ts
(+179 files in other folders)
